--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@babel/runtime": "7.13.8"
   },
   "scripts": {
