--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
     "@babel/runtime": "7.13.8",
+    "less": "^4.1.3",
     "sass": "^1.58.3"
   },
   "scripts": {
